--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -17,10 +17,9 @@
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95" />
+        app:layout_constraintTop_toBottomOf="@+id/politicas_priv_button"
+        app:layout_constraintVertical_bias="0.237" />
 
     <ImageButton
         android:id="@+id/logo2"
@@ -148,26 +147,24 @@
         android:layout_width="288dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="53dp"
         android:text="@string/registrarse"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordCha" />
 
     <TextView
         android:id="@+id/passwordCha"
         android:layout_width="296dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="45dp"
         android:text="@string/charac"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
@@ -210,14 +207,12 @@
         android:id="@+id/politicas_priv_button"
         android:layout_width="288dp"
         android:layout_height="66dp"
+        android:layout_marginTop="12dp"
         android:text="Al hacer click en  &quot;registrase&quot; acepta las políticas de privacidad de la empresa"
         android:textColor="#000000"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
